--- a/views/filemanager.hbs
+++ b/views/filemanager.hbs
@@ -1,10 +1,10 @@
 <a href="/delete">
-    <button class="button alone">
-        Delete all
+    <button class="button">
+        Usun wszystko
     </button>
 </a>
 <div class="files">
-    {{#each data}}
+    {{#each files}}
             {{> file this }}
     {{/each}}
 </div>
